# recipes_backend

./: .rustfmt.toml  Cargo.toml  README.md  mod.rs  prelude.rs
.github/workflows/: build.yml
entity/: Cargo.toml
entity/src/: fitting.rs  ingredient_units.rs  ingredients.rs  lib.rs  mod.rs  prelude.rs  recipes.rs  recipes_tags.rs  steps.rs  steps_ingredients.rs  steps_ingridients.rs  tags.rs  users.rs  weekplans.rs
migration/: Cargo.toml  initial.sql
migration/src/: lib.rs  m20220101_000001_create_recipes.rs  m20220916_134304_create_users.rs  m20220916_134304_initial.rs  m20220916_135004_create_recipes.rs  m20220916_135604_create_tags.rs  m20220917_080834_create_recipes_tags.rs  m20220917_082200_create_ingredients.rs  m20220917_082516_create_steps.rs  m20220917_083028_create_steps_ingridients.rs  m20220917_085315_create_users.rs  m20221211_100047_make_amount_optional.rs  m20221218_173259_make_tagname_unique.rs  m20221219_070643_add_fits_to.rs  m20221221_135800_add_name_to_steps.rs  m20221221_145615_add_default_quantity_to_recipes.rs  m20221228_085431_create_week_plan.rs  m20230101_124914_make_tag_name_not_null.rs
src/: api.rs  bring.rs  current_user.rs  ingredients.rs  jar.rs  main.rs  recipes.rs  steps.rs  tags.rs  token.rs  types.rs  users.rs  utils.rs  weekplan.rs
src/api/: ingredients.rs  mod.rs  recipes.rs  session.rs  steps.rs  tags.rs  users.rs  weekplans.rs
src/authorization/: ingredients_policy.rs  mod.rs  recipes_policy.rs  users_policy.rs  weekplan_policy.rs
