[package]
name = "recipes"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.10"
dotenv = "0.15"
env_logger = "0.11"
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["password-hash"] }
rand_core = { version = "0.9", features = ["std"] }
anyhow = "1.0"
actix-cors = "0.7"
log = "0.4"
serde_qs = { version = "0.15", features = ["actix4"] }

# picture handling
tokio = "1.47"
image = "0.25"
kamadak-exif = "0.6"
actix-files = "0.6"

[dependencies.async-graphql]
version = "7.0"
features = ["chrono", "log", "dataloader"]

[dependencies.sea-orm]
version = "^1.1"
features = [
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-postgres",
  "with-chrono",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["std", "serde"]

[dependencies.cookie]
version = "0.18.1"
features = ["secure", "percent-encode"]
