[package]
name = "recipes"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
dotenvy = "0.15.7"
env_logger = "0.11"
jsonwebtoken = "10.0"
argon2 = { version = "0.5", features = ["password-hash"] }
anyhow = "1.0"
log = "0.4"

# picture handling
tokio = "1.47"
image = "0.25"
kamadak-exif = "0.6"
http = "1.3.1"

async-graphql-axum = "7.0"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
serde_json = "1.0"

[dependencies.async-graphql]
version = "7.0"
features = ["chrono", "log", "dataloader"]

[dependencies.sea-orm]
version = "^1.1"
features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  "with-chrono",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["std", "serde"]

[dependencies.axum]
version = "0.8.5"
features = ["ws", "http2", "macros", "multipart", "json"]

[dependencies.axum-extra]
version = "0.10.1"
features = ["cookie", "cookie-private", "form", "multipart"]

[dependencies.jwt-simple]
version = "0.12"
default-features = false
features = ["pure-rust"]
