[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13"

async-graphql-derive = "6.0"
async-graphql-parser = "6.0"
async-graphql-value = "6.0"

[dependencies.async-graphql]
version = "7.0"
features = ["chrono", "log", "dataloader"]

[dependencies.sea-orm]
version = "^1.1"
features = [
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-postgres",
  "with-chrono",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]
